<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A237E"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/team1name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Team_1"
            android:textAlignment="center"
            android:textColor="#1A237E"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="87dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:onClick="team1Up"
            android:text="@string/increment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1name" />

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="team1Down"
            android:text="@string/decrement"
            app:layout_constraintBottom_toBottomOf="@+id/buttonUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/team1score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Team1_Points"
            android:textColor="#1A237E"
            android:textSize="50sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonDown"
            app:layout_constraintStart_toEndOf="@+id/buttonUp"
            app:layout_constraintTop_toBottomOf="@+id/team1name" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1score" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Team1_Points"
        android:textColor="#FFEB3B"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDown2"
        app:layout_constraintStart_toEndOf="@+id/buttonUp2"
        app:layout_constraintTop_toBottomOf="@+id/team2name" />

        <TextView
        android:id="@+id/team2name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/Team_2"
        android:textColor="#FFEB3B"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
        android:id="@+id/buttonUp2"
        android:layout_width="87dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/increment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2name"
        android:onClick="team2Up"/>

        <Button
        android:id="@+id/buttonDown2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/decrement"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2name"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="team2Down"/>

      </android.support.constraint.ConstraintLayout>



</LinearLayout>

